--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/31895599?v=4) center;"></div>
       <div id="username"><span style="display:block;">Kai Shukla</span><a href="https://github.com/Kaiwalya2502">@Kaiwalya2502</a></div>
-      <div id="userbio" style="display: block;">Data Scientist <br> ML Engineer <br> Data Engineer <br><br><br> MS in Statistics <br> BE in Computer Science</div>
+      <div id="userbio" style="display: block;">Data Scientist <br><br> ML Engineer <br><br> Data Engineer <br><br><br> MS in Statistics <br><br> BE in Computer Science</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; UW School of Medicine & Public Health</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
@@ -227,7 +227,7 @@
     </div>
     <script type="text/javascript">
       let cir = d3.select("#circles");
-      let generator = d3.randomUniform(800); // 400 is the range for the x-coordinate positions
+      let generator = d3.randomUniform(800); 
 
       // Initial data
       let x = Array.from({length: 10}, () => generator());
