--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       const svg = d3.select("svg");
       const textElement = svg.select(".header-text");
 
-      const messages = ["Hi", "I'm Kai", "Here are some projects I've worked on"];
+      const messages = ["Hi", "I'm Kai", "2+ Years of Experience", "Well-Versed in MLOps", "Here are some projects I've worked on"];
       let currentMessageIndex = 0;
 
       function updateText() {
