--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
   <link rel="icon" href="https://avatars.githubusercontent.com/u/31895599?v=4" type="image/png"></head>
 
   <body>
-    <div class="loading-container" id="loading">
-      <svg id="loadingsvg"></svg>
-      <!-- Loading screen will be generated here -->
-  </div>
+    <div id="loading">
+      <div id="spinner"></div>
+    </div>
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/31895599?v=4) center;"></div>
-      <div id="username"><span style="display:block;">Kaiwalya Shukla</span><a href="https://github.com/Kaiwalya2502">@Kaiwalya2502</a></div>
-      <div id="userbio" style="display: block;">Data Scientist <br><br> ML Engineer <br> MS in Statistics <br><br></div>
+      <div id="username"><span style="display:block;">Kai Shukla</span><a href="https://github.com/Kaiwalya2502">@Kaiwalya2502</a></div>
+      <div id="userbio" style="display: block;">Data Scientist <br><br> ML Engineer <br><br> Data Engineer <br><br><br> MS in Statistics <br><br> BE in Computer Science</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; UW School of Medicine & Public Health</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-link"></i> &nbsp; <a href=""></a></span>
-                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; San Francisco, CA</span>
+                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Madison, WI</span>
                 <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Open to Full-Time Opportunities</span>
                 <div class="socials">
                 <span style="display:none !important;"><a href="https://www.twitter.com/undefined" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
@@ -232,6 +231,7 @@
 
       // Initial data
       let x = Array.from({length: 10}, () => generator());
+
       // Create circles
       cir.selectAll("circle")
         .data(x)
@@ -241,9 +241,11 @@
         .attr("cy", 200) // centering vertically
         .attr("r", 10)
         .attr("fill", "orange");
+
       // Animate circles at fixed intervals
       setInterval(() => {
           let newX = Array.from({length: 10}, () => generator());
+          
           cir.selectAll("circle")
             .data(newX)
             .transition()
@@ -288,7 +290,7 @@
       const svg = d3.select("svg");
       const textElement = svg.select(".header-text");
 
-      const messages = ["Hi", "I'm Kai", "3+ Years of Experience", "Well-Versed in MLOps", "Here are some projects I've worked on"];
+      const messages = ["Hi", "I'm Kai", "2+ Years of Experience", "Well-Versed in MLOps", "Here are some projects I've worked on"];
       let currentMessageIndex = 0;
 
       function updateText() {
