--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/31895599?v=4) center;"></div>
       <div id="username"><span style="display:block;">Kai Shukla</span><a href="https://github.com/Kaiwalya2502">@Kaiwalya2502</a></div>
-      <div id="userbio" style="display: block;">Data Scientist <br><br> ML Engineer <br><br> Data Engineer <br><br><br> MS in Statistics <br><br> BE in Computer Science</div>
+      <div id="userbio" style="display: block;">Data Scientist <br><br> ML Engineer <br><br><br> MS in Statistics <br></div>
       <div id="about">
-                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; UW School of Medicine & Public Health</span>
+                <span style="display:none;"><i class="fas fa-users"></i> &nbsp; Kaedim</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-link"></i> &nbsp; <a href=""></a></span>
-                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Madison, WI</span>
+                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; San Francisco, CA</span>
                 <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Open to Full-Time Opportunities</span>
                 <div class="socials">
                 <span style="display:none !important;"><a href="https://www.twitter.com/undefined" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
